--- a/wghtk.css
+++ b/wghtk.css
@@ -44,7 +44,6 @@
     text-decoration: none;
     display: inline-block;
     font-weight: 400;
-    color: #212529;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -59,9 +58,9 @@
     border-radius: 0.25rem;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 
-    background: var(--wghtk-color1);
-    border-color: var(--wghtk-color1);
-    color: var(--wghtk-color4);
+    background: var(--wghtk-color1)!important;
+    border-color: var(--wghtk-color1)!important;
+    color: var(--wghtk-color4)!important;
 
 }
 
@@ -79,7 +78,6 @@
 
     display: inline-block;
     font-weight: 400;
-    color: #212529;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -94,8 +92,8 @@
     border-radius: 0.25rem;
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 
-    color: var(--wghtk-color1);
-    border-color: var(--wghtk-color1);
+    color: var(--wghtk-color1)!important;
+    border-color: var(--wghtk-color1)!important;
     background: transparent !important;
 
 }
@@ -105,7 +103,6 @@
 
     display: inline-block;
     font-weight: 400;
-    color: #212529;
     text-align: center;
     vertical-align: middle;
     -webkit-user-select: none;
@@ -121,9 +118,9 @@
     transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 
     border-radius: 50rem !important;
-    background: var(--wghtk-color1);
-    border-color: var(--wghtk-color1);
-    color: var(--wghtk-color4);
+    background: var(--wghtk-color1)!important;
+    border-color: var(--wghtk-color1)!important;
+    color: var(--wghtk-color4)!important;
 }
 .btn-none,.btn-none:hover {
     text-decoration: none;
@@ -133,20 +130,16 @@
 
 
 
-.btn-34-site {
-    color: var(--wghtk-color4);
+.btn-34-site,.btn-34-site:hover {
+    color: var(--wghtk-color4)!important;
+    text-decoration: none;
     text-decoration: none;
 
-}
-
-.btn-34-site {
-    text-decoration: none;
-
-    background: var(--wghtk-color1);
+    background: var(--wghtk-color1)!important;
     border-radius: .25rem;
     box-shadow: var(--wghtk-color1) 0 10px 20px -10px;
-    box-sizing: border-box;
-    color: var(--wghtk-color4);
+    box-sizing: border-box!important;
+    color: var(--wghtk-color4)!important;
     cursor: pointer;
     font-size: 16px;
     font-weight: 700;
@@ -165,7 +158,7 @@
 
 /* CSS */
 .btn-scoot-site:hover {
-            color: var(--wghtk-color4);
+            color: var(--wghtk-color4)!important;
     text-decoration: none;
 
 }
@@ -173,13 +166,13 @@
     text-decoration: none;
 
     appearance: button;
-    background-color: var(--wghtk-color1);
+    background-color: var(--wghtk-color1)!important;
     background-image: none;
-    border: 1px solid var(--wghtk-color1);
+    border: 1px solid var(--wghtk-color1)!important;
     border-radius: 4px;
     box-shadow: var(--wghtk-color4) 4px 4px 0 0, var(--wghtk-color1) 4px 4px 0 1px;
     box-sizing: border-box;
-    color: var(--wghtk-color4);
+    color: var(--wghtk-color4)!important;
     cursor: pointer;
     display: inline-block;
     font-size: 14px;
@@ -225,7 +218,7 @@
 /* CSS */
 .btn-bocock-site {
     text-decoration: none;
-            color: var(--wghtk-color4);
+            color: var(--wghtk-color4)!important;
 
     font-size: 16px;
     font-weight: 200;
@@ -235,7 +228,7 @@
     border: 1px solid black;
     cursor: pointer;
     position: relative;
-    background-color: transparent;
+    background-color: transparent!important;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -243,7 +236,7 @@
 
 .btn-bocock-site:after {
     content: "";
-    background-color: var(--wghtk-color1);
+    background-color: var(--wghtk-color1)!important;
     width: 100%;
     z-index: -1;
     position: absolute;
@@ -254,7 +247,7 @@
 
 }
 .btn-bocock-site:hover {
-    color: var(--wghtk-color4);
+    color: var(--wghtk-color4)!important;
     text-decoration: none;
 
 }
